@@ -2,3 +2,7 @@
 Simulating physics by diffenrent objects
 Install java ver 21 or latest
 Install javaFX ver 21 or latest for visual
+Setup javaFX by going to Run → Edit Configurations → Main ->  Modify options → Add VM options
+After add VM option paste javaFx lib path and Apply
+example"--module-path D:\javafx-sdk-25.0.1\lib --add-modules javafx.controls,javafx.fxml"
+In run configuration select jdk version
